kubernetes/dev/mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: drupal
    tier: db
    environment: dev
spec:
  ports:
    - port: 3306
  selector:
    app: drupal
    tier: db
    environment: dev
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: drupal
    tier: db
    environment: dev
spec:
  selector:
    matchLabels:
      app: drupal
      tier: db
      environment: dev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal
        tier: db
        environment: dev
    spec:
      containers:
      - image: dragosdumi/mysite-mysql
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
          subPath: mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
