kubernetes/dev/redis-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: drupal
    role: master
    tier: cache
    environment: dev
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: drupal
    role: master
    tier: cache
    environment: dev
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-master
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drupal
        role: master
        tier: cache
        environment: dev
    spec:
      containers:
      - name: master
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
