kubernetes/dev/varnish.yml
apiVersion: v1
kind: Service
metadata:
  name: varnish
  labels:
    app: drupal
    tier: varnish
    environment: dev
spec:
  selector:
    app: drupal
    tier: varnish
    environment: dev
  type: NodePort
  ports:
  - port: 80
    targetPort: 6081
#    nodePort: 31086
    protocol: TCP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: varnish
  labels:
    app: drupal
    tier: varnish
    environment: dev
spec:
  selector:
    matchLabels:
      app: drupal
      tier: varnish
      environment: dev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal
        tier: varnish
        environment: dev
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: regsecret
      containers:
      - image: "dragosdumi/mysite-varnish:latest"
        name: varnish
        ports:
        - containerPort: 6081
