kubernetes/dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mysite-ip
  labels:
    app: drupal
    tier: varnish
    environment: dev
spec:
  backend:
    serviceName: varnish
    servicePort: 80
#  rules:
#  - host: dragosdumitrescu.ro
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: varnish
#          serviceName: nginx
#          servicePort: 80
#
